@@ -153,6 +153,9 @@ o qmail-remote can use credentials stored in remote_auth.cdb using simple or
 - 18/12/2022
 84. autoresponder.c, qmail-qfilter.c, serialcmd.c, sslerator.c,
     sys-checkpwd.c: handle wait status in detail
+- 20/12/2022
+85. dns.c: Fixed dns_txt(), dns_ptr() strsalloc_append
+86. spf.c: added ssa_free() to free strsalloc variable
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.1-1.1%{?dist}
 Release 3.0.1 Start 21/05/2022 End 08/09/2022
